// Copyright 2021 Cargill Incorporated
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

message PurchaseOrder {
  string org_id = 1;
  string uuid = 2;
  string workflow_status = 3;
  repeated PurchaseOrderVersion versions = 4;
  string accepted_version_number = 5;
  uint64 created_at = 6;
  bool is_closed = 7;
}

message PurchaseOrderList {
  repeated PurchaseOrder purchase_orders = 1;
}

message PurchaseOrderVersion {
  string version_id = 1;
  string workflow_status = 2;
  bool is_draft = 3;
  string current_revision_id = 4;
  PurchaseOrderRevision revisions = 5;
  string po_uuid = 6;
}

message PurchaseOrderRevision {
  string revision_id = 1;
  string submitter = 2;
  uint64 created_at = 3;

  string order_xml_v3_4 = 4;
}

message PurchaseOrderAlternateId {
  string id_type = 1;
  string id = 2;
  string org_id = 3;
}

message PurchaseOrderAlternateIdList {
  repeated PurchaseOrderAlternateId alternate_ids = 1;
}
